@@ -66,6 +66,9 @@ fuzzer.
 being diagnosed, possibly leading to a buffer overflow. This bug was found by
 the LLVM fuzzer.
 
+18. A conditional group with only one branch has an implicit empty alternative 
+branch and must therefore be treated as potentially matching an empty string.
+
 
 Version 10.20 30-June-2015
 --------------------------
